map showing/ centered signin up/ todo with checkmarks

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "firebase": "^4.10.1",
+    "google-map-react": "^0.34.0",
+    "google-maps-react": "^2.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
