--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
     "firebase": "^4.10.1",
     "google-map-react": "^0.34.0",
     "google-maps-react": "^2.0.0",
+    "packery": "^2.1.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-mason": "^1.1.2",
+    "react-masonry-component": "^6.2.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
+    "react-sizeme": "^2.4.3",
+    "react-stack-grid": "^0.7.1",
     "semantic-ui-css": "^2.3.1",
     "semantic-ui-react": "^0.78.3"
   },
