--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "google-maps-react": "^2.0.0",
     "packery": "^2.1.1",
     "react": "^16.2.0",
+    "react-calculator": "0.0.2",
     "react-dom": "^16.2.0",
     "react-mason": "^1.1.2",
     "react-masonry-component": "^6.2.0",
